--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,7 @@ version = "0.1.0"
 description = "Flexible interface generator for catalysis, surface science, and materials modeling."
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "ase>=3.25.0",
+    "pymatgen>=2025.5.2",
+]
