--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ase>=3.25.0",
+    "pydantic>=2.11.4",
     "pymatgen>=2025.5.2",
+    "toml>=0.10.2",
 ]
